[tool.poetry]
name = "yuko"
version = "0.1.0"
description = "A Rust based validation library for Python"
authors = ["Onuralp SEZER <thunderbirdtr@gmail.com>","Kader MİYANYEDİ <Kadermiyanyedi@hotmail.com>"]
maintainers = ["Onuralp SEZER <thunderbirdtr@gmail.com>","Kader MİYANYEDİ <Kadermiyanyedi@hotmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
maturin = "^1.3.2"
pre-commit = "^3.5.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "yuko"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]


[tool.mypy]
python_version = "3.7"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true
ignore_missing_imports = true
exclude = '/venv/,.venv/,.git/,.tox/,.eggs/'

[tool.codespell]
ignore-words-list = 'crate,fo,fro,nam,som,tha,caf'
skip = './.git,./target,./test-crates/venvs,./guide/book,src/country_code_valid.rs'
